about-gap-correction

--- a/css/indexcss.css
+++ b/css/indexcss.css
@@ -56,7 +56,7 @@ nav {
 nav.scrolled {
     margin-top: 0px;
     background-color: skyblue;
-    
+
 }
 
 nav > .nav-wrapper > ul > li > a {
@@ -239,7 +239,7 @@ nav.nav-center ul li a {
 @media all and (max-width: 600px) {
     .about-wrap .container .content h1 {
         font-size: 2.3em;
-    } 
+    }
 }
 
 .about-wrap .top-row-box {
@@ -251,6 +251,7 @@ nav.nav-center ul li a {
 .about-wrap .top-row-box .row .col.l6.m6.s12 .box .box-content {
     padding: 20px 20px;
     border: 2px solid skyblue;
+    display: flex;
 }
 
 .about-wrap .top-row-box .row .col.l6.m6.s12 .box .box-content .quote {
@@ -270,11 +271,11 @@ nav.nav-center ul li a {
     .about-wrap .top-row-box .row .col.l6.m6.s12 .box .box-content .quote {
         width: 100%;
     }
-    
+
     .about-wrap .top-row-box .row .col.l6.m6.s12 .box .box-content {
         margin: 5px 0;
     }
-    
+
     .about-wrap .top-row-box {
         padding: 5px 5px;
     }
@@ -305,7 +306,9 @@ nav.nav-center ul li a {
     font-style: normal;
     color: #fff;
     text-align: center;
-    
+    margin-bottom: 0px;
+    padding-bottom: 20px;
+
 }
 
 .news-wrap {
@@ -508,7 +511,7 @@ nav.nav-center ul li a {
     color: skyblue;
     transition: all 300ms ease;
     margin: 30px 0 0 0;
-    
+
 }
 
 .store-wrap .container .storetitle a:hover {
